[tool.poetry]
name = "ms_arya"
version = "0.1.0"
description = ""
authors = ["Dmitrii Rumyancev <rychanya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.1"
pymongo = "^3.11.3"
dnspython = "^2.1.0"
python-dotenv = "^0.17.0"
loguru = "^0.5.3"
pytest-mock = "^3.5.1"
transitions = "^0.8.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
nox = "^2020.12.31"
Sphinx = "^3.5.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
