[tool.poetry]
name = "ms_arya"
version = "0.1.0"
description = ""
authors = ["Dmitrii Rumyancev <rychanya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
python-dotenv = "^0.19.0"
loguru = "^0.5.3"
pytest-mock = "^3.6.1"
transitions = "^0.8.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
nox = "^2021.6.12"
Sphinx = "^4.1.2"
coverage = "^5.5"
black = "^22.8"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
